feat: atualiza index e adiciona novas imagens

--- a/index.html
+++ b/index.html
@@ -1395,6 +1395,8 @@
                     <a href="https://wa.me/+5598984803934?text=Olá!%20Quero%20contratar%20o%20Plano%20Premium" class="plan-button">Quero Este Plano</a>
                 </div>
             </div>
+            </div>
+
                 </p>Enquanto você hesita, seus concorrentes já estão usando IA profissional, e você está perdendo dinhieiro.</p>
 
         </div>
@@ -1470,7 +1472,7 @@
                 <div class="testimonial-card">
                     <div class="testimonial-header">
                         <div class="testimonial-avatar">
-                            <img src="images/avatar_joao.jpeg" alt="João Ferreira">
+                            <img src="images/avatar-joao.jpg" alt="João Ferreira">
                         </div>
                         <div class="testimonial-info">
                             <h4>João Ferreira</h4>
@@ -1484,7 +1486,7 @@
                 <div class="testimonial-card">
                     <div class="testimonial-header">
                         <div class="testimonial-avatar">
-                            <img src="images/avatar_ana.jpeg" alt="Ana Beatriz">
+                            <img src="images/avatar-ana.jpg" alt="Ana Beatriz">
                         </div>
                         <div class="testimonial-info">
                             <h4>Ana Beatriz</h4>
